Haiku/bridge/libmojobe/mojobe.h

/*!	`BRect` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BRect` by
	hidden reference. */
struct mojobe_BRect {
	float	left;
	float	top;
	float	right;
	float	bottom;
};
/*!	`BPoint` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BPoint` by
	hidden reference. */
struct mojobe_BPoint {
	float	x;
	float	y;
};
// #pragma mark - BView


// status_t BView::Archive(BMessage* archive, bool deep) const
status_t mojobe_BView_Archive(BView* self, BMessage* a_archive, bool a_deep);
// status_t BView::AllUnarchived(const BMessage* archive)
status_t mojobe_BView_AllUnarchived(BView* self, BMessage* a_archive);
// status_t BView::AllArchived(BMessage* archive) const
status_t mojobe_BView_AllArchived(BView* self, BMessage* a_archive);
// void BView::AttachedToWindow()
void mojobe_BView_AttachedToWindow(BView* self);
// void BView::AllAttached()
void mojobe_BView_AllAttached(BView* self);
// void BView::DetachedFromWindow()
void mojobe_BView_DetachedFromWindow(BView* self);
// void BView::AllDetached()
void mojobe_BView_AllDetached(BView* self);
// void BView::MessageReceived(BMessage* message)
void mojobe_BView_MessageReceived(BView* self, BMessage* a_message);
// void BView::AddChild(BView* child, BView* before)
void mojobe_BView_AddChild(BView* self, BView* a_child, BView* a_before);
// bool BView::RemoveChild(BView* child)
bool mojobe_BView_RemoveChild(BView* self, BView* a_child);
// int32 BView::CountChildren() const
int32 mojobe_BView_CountChildren(BView* self);
// BView* BView::ChildAt(int32 index) const
BView* mojobe_BView_ChildAt(BView* self, int32 a_index);
// BView* BView::NextSibling() const
BView* mojobe_BView_NextSibling(BView* self);
// BView* BView::PreviousSibling() const
BView* mojobe_BView_PreviousSibling(BView* self);
// bool BView::RemoveSelf()
bool mojobe_BView_RemoveSelf(BView* self);
// BWindow* BView::Window() const
BWindow* mojobe_BView_Window(BView* self);
// void BView::Draw(BRect updateRect)
void mojobe_BView_Draw(BView* self, mojobe_BRect a_updateRect);
// void BView::MouseDown(BPoint where)
void mojobe_BView_MouseDown(BView* self, mojobe_BPoint a_where);
// void BView::MouseUp(BPoint where)
void mojobe_BView_MouseUp(BView* self, mojobe_BPoint a_where);
// void BView::MouseMoved(BPoint where, uint32 code, const BMessage* dragMessage)
void mojobe_BView_MouseMoved(BView* self,
	mojobe_BPoint a_where,
	uint32 a_code,
	BMessage* a_dragMessage);
// void BView::WindowActivated(bool active)
void mojobe_BView_WindowActivated(BView* self, bool a_active);
// void BView::KeyDown(const char* bytes, int32 numBytes)
void mojobe_BView_KeyDown(BView* self, const char* a_bytes, int32 a_numBytes);
// void BView::KeyUp(const char* bytes, int32 numBytes)
void mojobe_BView_KeyUp(BView* self, const char* a_bytes, int32 a_numBytes);
// void BView::Pulse()
void mojobe_BView_Pulse(BView* self);