Haiku/bridge/haiku/_api.mojo


    def __init__(out self):
        self.type = 0
        self.destroy = {}
        self.MessageReceived = {}
        self.QuitRequested = {}
        self.FrameMoved = {}
        self.FrameResized = {}
        self.WindowActivated = {}
        self.WorkspaceActivated = {}
        self.MenusBeginning = {}
        self.MenusEnded = {}
        self.Zoom = {}
        self.Minimize = {}


def _BWindow_MessageReceived[T: WindowMessageReceived](
    context: _Ptr,
    window: Int,
    message: Int,
) abi("C"):
    context.unsafe_bitcast[T]()[].MessageReceived(
        BWindowRef(_ptr_from(window)),
        BMessageRef(_ptr_from(message)),
    )


def _BWindow_QuitRequested[T: WindowQuitRequested](
    context: _Ptr,
    window: Int,
) abi("C") -> Bool:
    return context.unsafe_bitcast[T]()[].QuitRequested(
        BWindowRef(_ptr_from(window)),
    )


def _BWindow_FrameMoved[T: WindowFrameMoved](
    context: _Ptr,
    window: Int,
    newPosition: BPoint,
) abi("C"):
    context.unsafe_bitcast[T]()[].FrameMoved(
        BWindowRef(_ptr_from(window)),
        newPosition,
    )


def _BWindow_FrameResized[T: WindowFrameResized](
    context: _Ptr,
    window: Int,
    newWidth: Float32,
    newHeight: Float32,
) abi("C"):
    context.unsafe_bitcast[T]()[].FrameResized(
        BWindowRef(_ptr_from(window)),
        newWidth,
        newHeight,
    )


def _BWindow_WindowActivated[T: WindowWindowActivated](
    context: _Ptr,
    window: Int,
    focus: Bool,
) abi("C"):
    context.unsafe_bitcast[T]()[].WindowActivated(
        BWindowRef(_ptr_from(window)),
        focus,
    )


def _BWindow_WorkspaceActivated[T: WindowWorkspaceActivated](
    context: _Ptr,
    window: Int,
    workspace: Int32,
    state: Bool,
) abi("C"):
    context.unsafe_bitcast[T]()[].WorkspaceActivated(
        BWindowRef(_ptr_from(window)),
        workspace,
        state,
    )


def _BWindow_MenusBeginning[T: WindowMenusBeginning](
    context: _Ptr,
    window: Int,
) abi("C"):
    context.unsafe_bitcast[T]()[].MenusBeginning(BWindowRef(_ptr_from(window)))


def _BWindow_MenusEnded[T: WindowMenusEnded](
    context: _Ptr,
    window: Int,
) abi("C"):
    context.unsafe_bitcast[T]()[].MenusEnded(BWindowRef(_ptr_from(window)))


def _BWindow_Zoom[T: WindowZoom](
    context: _Ptr,
    window: Int,
    origin: BPoint,
    width: Float32,
    height: Float32,
) abi("C"):
    context.unsafe_bitcast[T]()[].Zoom(
        BWindowRef(_ptr_from(window)),
        origin,
        width,
        height,
    )


def _BWindow_Minimize[T: WindowMinimize](
    context: _Ptr,
    window: Int,
    minimize: Bool,
) abi("C"):
    context.unsafe_bitcast[T]()[].Minimize(
        BWindowRef(_ptr_from(window)),
        minimize,
    )


def _BWindow_hooks[T: Movable & Deinitable]() -> _BWindowHooks:
    """`T`'s hooks for a `BWindow`: a slot for each hook it implements, NULL for the rest, decided at compile time."""
    var hooks = _BWindowHooks()
    hooks.type = _type_tag[T]()
    hooks.destroy = _fn_ptr(_destroy[T])
    comptime if conforms_to(T, WindowMessageReceived):
        hooks.MessageReceived = _fn_ptr(
            _BWindow_MessageReceived[downcast[T, WindowMessageReceived]],
        )
    comptime if conforms_to(T, WindowQuitRequested):
        hooks.QuitRequested = _fn_ptr(
            _BWindow_QuitRequested[downcast[T, WindowQuitRequested]],
        )
    comptime if conforms_to(T, WindowFrameMoved):
        hooks.FrameMoved = _fn_ptr(
            _BWindow_FrameMoved[downcast[T, WindowFrameMoved]],
        )
    comptime if conforms_to(T, WindowFrameResized):
        hooks.FrameResized = _fn_ptr(
            _BWindow_FrameResized[downcast[T, WindowFrameResized]],
        )
    comptime if conforms_to(T, WindowWindowActivated):
        hooks.WindowActivated = _fn_ptr(
            _BWindow_WindowActivated[downcast[T, WindowWindowActivated]],
        )
    comptime if conforms_to(T, WindowWorkspaceActivated):
        hooks.WorkspaceActivated = _fn_ptr(
            _BWindow_WorkspaceActivated[downcast[T, WindowWorkspaceActivated]],
        )
    comptime if conforms_to(T, WindowMenusBeginning):
        hooks.MenusBeginning = _fn_ptr(
            _BWindow_MenusBeginning[downcast[T, WindowMenusBeginning]],
        )
    comptime if conforms_to(T, WindowMenusEnded):
        hooks.MenusEnded = _fn_ptr(
            _BWindow_MenusEnded[downcast[T, WindowMenusEnded]],
        )
    comptime if conforms_to(T, WindowZoom):
        hooks.Zoom = _fn_ptr(_BWindow_Zoom[downcast[T, WindowZoom]])
    comptime if conforms_to(T, WindowMinimize):
        hooks.Minimize = _fn_ptr(_BWindow_Minimize[downcast[T, WindowMinimize]])
    return hooks

# ========================================================================== #
# BView
# ========================================================================== #


trait _AsBView:
    """Has a `BView*` for libmojobe."""

    def _as_BView(self) -> _NPtr:
        ...


trait _BViewMethods(_AsBView):
    """`BView`'s methods, for its references and the values Mojo owns."""

    def Archive(self, archive: Some[_AsBMessage], deep: Bool = True) raises:
        """`status_t BView::Archive(BMessage* archive, bool deep) const`."""
        var _result = external_call["mojobe_BView_Archive", Int32](
            _nonnull(self._as_BView(), "BView::Archive"),
            _addr(archive._as_BMessage()),
            deep,
        )
        _check(_result, "BView::Archive")

    def AllUnarchived(self, archive: Some[_AsBMessage]) raises:
        """`status_t BView::AllUnarchived(const BMessage* archive)`."""
        var _result = external_call["mojobe_BView_AllUnarchived", Int32](
            _nonnull(self._as_BView(), "BView::AllUnarchived"),
            _addr(archive._as_BMessage()),
        )
        _check(_result, "BView::AllUnarchived")

    def AllArchived(self, archive: Some[_AsBMessage]) raises:
        """`status_t BView::AllArchived(BMessage* archive) const`."""
        var _result = external_call["mojobe_BView_AllArchived", Int32](
            _nonnull(self._as_BView(), "BView::AllArchived"),
            _addr(archive._as_BMessage()),
        )
        _check(_result, "BView::AllArchived")

    def AttachedToWindow(self):
        """`void BView::AttachedToWindow()`."""
        external_call["mojobe_BView_AttachedToWindow", NoneType](
            _nonnull(self._as_BView(), "BView::AttachedToWindow"),
        )

    def AllAttached(self):
        """`void BView::AllAttached()`."""
        external_call["mojobe_BView_AllAttached", NoneType](
            _nonnull(self._as_BView(), "BView::AllAttached"),
        )

    def DetachedFromWindow(self):
        """`void BView::DetachedFromWindow()`."""
        external_call["mojobe_BView_DetachedFromWindow", NoneType](
            _nonnull(self._as_BView(), "BView::DetachedFromWindow"),
        )

    def AllDetached(self):
        """`void BView::AllDetached()`."""
        external_call["mojobe_BView_AllDetached", NoneType](
            _nonnull(self._as_BView(), "BView::AllDetached"),
        )

    def MessageReceived(self, message: Some[_AsBMessage]):
        """`void BView::MessageReceived(BMessage* message)`."""
        external_call["mojobe_BView_MessageReceived", NoneType](
            _nonnull(self._as_BView(), "BView::MessageReceived"),
            _addr(message._as_BMessage()),
        )

    def AddChild(self, var child: BView, before: BViewRef = BViewRef()):
        """`void BView::AddChild(BView* child, BView* before)`."""
        external_call["mojobe_BView_AddChild", NoneType](
            _nonnull(self._as_BView(), "BView::AddChild"),
            child^._adopt(),
            _addr(before._as_BView()),
        )

    def RemoveChild(self, child: Some[_AsBView]) -> Bool:
        """`bool BView::RemoveChild(BView* child)`."""
        var _result = external_call["mojobe_BView_RemoveChild", Bool](
            _nonnull(self._as_BView(), "BView::RemoveChild"),
            _addr(child._as_BView()),
        )
        return _result

    def CountChildren(self) -> Int32:
        """`int32 BView::CountChildren() const`."""
        var _result = external_call["mojobe_BView_CountChildren", Int32](
            _nonnull(self._as_BView(), "BView::CountChildren"),
        )
        return _result

    def ChildAt(self, index: Int32) -> BViewRef:
        """`BView* BView::ChildAt(int32 index) const`."""
        var _result = external_call["mojobe_BView_ChildAt", Int](
            _nonnull(self._as_BView(), "BView::ChildAt"),
            index,
        )
        return BViewRef(_ptr_from(_result))

    def NextSibling(self) -> BViewRef:
        """`BView* BView::NextSibling() const`."""
        var _result = external_call["mojobe_BView_NextSibling", Int](
            _nonnull(self._as_BView(), "BView::NextSibling"),
        )
        return BViewRef(_ptr_from(_result))

    def PreviousSibling(self) -> BViewRef:
        """`BView* BView::PreviousSibling() const`."""
        var _result = external_call["mojobe_BView_PreviousSibling", Int](
            _nonnull(self._as_BView(), "BView::PreviousSibling"),
        )
        return BViewRef(_ptr_from(_result))

    def RemoveSelf(self) -> Bool:
        """`bool BView::RemoveSelf()`."""
        var _result = external_call["mojobe_BView_RemoveSelf", Bool](
            _nonnull(self._as_BView(), "BView::RemoveSelf"),
        )
        return _result

    def Window(self) -> BWindowRef:
        """`BWindow* BView::Window() const`."""
        var _result = external_call["mojobe_BView_Window", Int](
            _nonnull(self._as_BView(), "BView::Window"),
        )
        return BWindowRef(_ptr_from(_result))

    def Draw(self, updateRect: BRect):
        """`void BView::Draw(BRect updateRect)`."""
        external_call["mojobe_BView_Draw", NoneType](
            _nonnull(self._as_BView(), "BView::Draw"),
            updateRect,
        )

    def MouseDown(self, where: BPoint):
        """`void BView::MouseDown(BPoint where)`."""
        external_call["mojobe_BView_MouseDown", NoneType](
            _nonnull(self._as_BView(), "BView::MouseDown"),
            where,
        )

    def MouseUp(self, where: BPoint):
        """`void BView::MouseUp(BPoint where)`."""
        external_call["mojobe_BView_MouseUp", NoneType](
            _nonnull(self._as_BView(), "BView::MouseUp"),
            where,
        )

    def MouseMoved(
        self,
        where: BPoint,
        code: UInt32,
        dragMessage: Some[_AsBMessage],
    ):
        """`void BView::MouseMoved(BPoint where, uint32 code, const BMessage* dragMessage)`."""
        external_call["mojobe_BView_MouseMoved", NoneType](
            _nonnull(self._as_BView(), "BView::MouseMoved"),
            where,
            code,
            _addr(dragMessage._as_BMessage()),
        )

    def WindowActivated(self, active: Bool):
        """`void BView::WindowActivated(bool active)`."""
        external_call["mojobe_BView_WindowActivated", NoneType](
            _nonnull(self._as_BView(), "BView::WindowActivated"),
            active,
        )

    def KeyDown(self, var bytes: String, numBytes: Int32):
        """`void BView::KeyDown(const char* bytes, int32 numBytes)`."""
        external_call["mojobe_BView_KeyDown", NoneType](
            _nonnull(self._as_BView(), "BView::KeyDown"),
            bytes.as_c_string_span(),
            numBytes,
        )
        _ = bytes^

    def KeyUp(self, var bytes: String, numBytes: Int32):
        """`void BView::KeyUp(const char* bytes, int32 numBytes)`."""
        external_call["mojobe_BView_KeyUp", NoneType](
            _nonnull(self._as_BView(), "BView::KeyUp"),
            bytes.as_c_string_span(),
            numBytes,
        )
        _ = bytes^

    def Pulse(self):
        """`void BView::Pulse()`."""
        external_call["mojobe_BView_Pulse", NoneType](
            _nonnull(self._as_BView(), "BView::Pulse"),
        )
